<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity">

    <Button
        android:id="@+id/minusButton"
        android:layout_width="48dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="minusOne"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/foodCost" />

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="317dp"
        android:layout_height="204dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/foodCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/blank"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodDescrption" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dollars"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/foodCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodDescrption" />

    <TextView
        android:id="@+id/foodDescrption"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/blank"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodName" />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/blank"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/defaultvalue"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodCost" tools:targetApi="o"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="76dp"
        android:background="@color/brightOrange"
        android:onClick="goBack"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="48dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="addOne"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/foodCost" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="76dp"
        android:background="@color/brightOrange"
        android:onClick="onClick"
        android:text="@string/additem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/backButton" />

</androidx.constraintlayout.widget.ConstraintLayout>